fix invisible carousel button

--- a/app/assets/stylesheets/api/splash_carousel.scss
+++ b/app/assets/stylesheets/api/splash_carousel.scss
@@ -1,11 +1,11 @@
 .carousel {
-  // height: 75vh
+  // width: 100vw;
 }
 
 .carousel-image {
   height: 80vh;
   object-fit: cover;
-  // opacity: 0.9;
+  // width: 100vw
 }
 
 .carousel::after {
@@ -14,7 +14,7 @@
   background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3));
   margin-top: -80vh;
   height: 80vh;
-  width: 100%;
+  width: 100vw;
   content: '';
 }
 
@@ -25,4 +25,8 @@
   transform: translate(-50%, -50%);
   color: white;
   z-index: 3
+}
+
+.slick-track {
+  // width: 100vw;
 }
